--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "djangorestframework (>=3.16.0,<4.0.0)",
     "pytest (>=8.3.5,<9.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 
